// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureCard Displays a draggable card with accessibility pattern 1`] = `
<div
  class="element-backlog-items"
  data-element-id="100"
  draggable="true"
>
  <div
    class="element-card-container"
    data-tlp-tooltip=""
  >
    <div
      class="element-card element-card-lake_placid_blue element-card-background-peggy_pink_text element-card-with-accessibility element-draggable-item"
      data-test="feature-card"
    >
      <div
        class="element-card-content"
      >
        <div
          class="element-card-xref-label"
        >
          <a
            class="element-card-xref element-card-xref-lake_placid_blue"
            data-not-drag-handle="true"
            href="/plugins/tracker/?aid=100"
          >
            
                        
                    
          </a>
           
          <span
            class="element-card-label"
          >
            My artifact
          </span>
        </div>
      </div>
       
      <div
        class="element-card-accessibility"
      />
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`FeatureCard Displays a not draggable card when user can not plan/unplan features 1`] = `
<div
  class="element-backlog-items"
  data-element-id="100"
  draggable="false"
>
  <div
    class="element-card-container tlp-tooltip tlp-tooltip-left"
    data-tlp-tooltip="The feature is not plannable, user does not have permission to update artifact or field link."
  >
    <div
      class="element-card element-card-lake_placid_blue"
      data-test="feature-card"
    >
      <div
        class="element-card-content"
      >
        <div
          class="element-card-xref-label"
        >
          <a
            class="element-card-xref element-card-xref-lake_placid_blue"
            data-not-drag-handle="true"
            href="/plugins/tracker/?aid=100"
          >
            
                        
                    
          </a>
           
          <span
            class="element-card-label"
          >
            My artifact
          </span>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`FeatureCard Displays a not draggable card without accessibility pattern 1`] = `
<div
  class="element-backlog-items"
  data-element-id="100"
  draggable="true"
>
  <div
    class="element-card-container"
    data-tlp-tooltip=""
  >
    <div
      class="element-card element-card-lake_placid_blue"
      data-test="feature-card"
    >
      <div
        class="element-card-content"
      >
        <div
          class="element-card-xref-label"
        >
          <a
            class="element-card-xref element-card-xref-lake_placid_blue"
            data-not-drag-handle="true"
            href="/plugins/tracker/?aid=100"
          >
            
                        
                    
          </a>
           
          <span
            class="element-card-label"
          >
            My artifact
          </span>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;
